Shortened raspberry info and updated install.sh

--- a/setups/raspberry/.xmobarrc
+++ b/setups/raspberry/.xmobarrc
@@ -11,10 +11,10 @@ Config { font = "xft:Cousine:bold:antialias=true:size=9,-*-Fixed-Bold-R-Normal-*
                         , Run Memory ["-t","Mem: <usedratio>%"] 10
                         , Run Swap [] 10
                         , Run Com "uname" ["-s","-r"] "" 36000
-                        , Run Date "%a %b %_d %Y %H:%M:%S" "date" 10
+                        , Run Date "%d/%m/%y %H:%M:%S" "date" 10
                         , Run StdinReader
                         ]
         , sepChar = "%"
         , alignSep = "}{"
-        , template = "%StdinReader% | %cpu% | %memory% }{<fc=#ee9a00>%date%</fc> | %uname% | %EGNV% "
+        , template = "%StdinReader% | %cpu% | %memory% }{<fc=#ee9a00>%date%</fc> | %EGNV% "
         }
