--- a/setups/desktop/.xsessionrc
+++ b/setups/desktop/.xsessionrc
@@ -12,6 +12,10 @@ if [ "$DESKTOP_SESSION" == "xmonad" ]; then
 	
 	xscreensaver -no-splash &
 	
+	if [ -x /usr/local/bin/fluxgui ] ; then
+		fluxgui &	
+	fi
+
 	if [ -x /usr/bin/xfce4-power-manager ] ; then
 		xfce4-power-manager &	
 	fi
@@ -19,10 +23,6 @@ if [ "$DESKTOP_SESSION" == "xmonad" ]; then
 	if [ -x /usr/bin/unclutter ]; then
 		unclutter -idle 2 &
 	fi
-
-	if [ -x /usr/bin/nm-applet ] ; then
-		nm-applet --sm-disable &
-	fi
-
+	
 	exec xmonad
 fi
