--- a/setups/raspberry/.xsessionrc
+++ b/setups/raspberry/.xsessionrc
@@ -1,26 +1,28 @@
 #!/bin/bash
 
-# Load resources
-
-xrdb -merge .Xresources
-
-# Set up an icon tray
-stalonetray &
-
-# Fire up apps
-
-xscreensaver -no-splash &
-
-if [ -x /usr/bin/xfce4-power-manager ] ; then
-xfce4-power-manager &
+if [ "$DESKTOP_SESSION" == "xmonad" ]; then 
+	# Load resources
+	
+	xrdb -merge .Xresources
+	
+	# Set up an icon tray
+	stalonetray &
+	
+	# Fire up apps
+	
+	xscreensaver -no-splash &
+	
+	if [ -x /usr/bin/xfce4-power-manager ] ; then	
+		xfce4-power-manager &
+	fi	
+	
+	if [ -x /usr/bin/unclutter ]; then
+		unclutter -idle 2 &
+	fi
+	
+	if [ -x /usr/bin/nm-applet ] ; then
+		nm-applet --sm-disable &
+	fi
+	
+	exec xmonad
 fi
-
-if [ -x /usr/bin/unclutter ]; then
-unclutter -idle 2 &
-fi
-
-if [ -x /usr/bin/nm-applet ] ; then
-   nm-applet --sm-disable &
-fi
-
-exec xmonad
